--- a/car_rental/css/style.css
+++ b/car_rental/css/style.css
@@ -1,3 +1,11 @@
 body{
     background-color: aqua;
+    background-repeat: round;
+}
+
+h1{
+    color: brown;
+    font-size: 35%;
+    font-style: oblique;
+
 }
