--- a/car_rental/css/style.css
+++ b/car_rental/css/style.css
@@ -9,3 +9,13 @@ h1{
     font-style: oblique;
 
 }
+
+.form-style {
+    margin-bottom: 20px; 
+    padding: 15px; 
+}
+
+.button-style {
+    margin-top: 10px; 
+    margin-right: 5px; 
+}
